cleaned up endpionts
